Fixes text legibility.

--- a/src/styles/formbuilder.sass
+++ b/src/styles/formbuilder.sass
@@ -808,6 +808,8 @@ $font: 'Montserrat', sans-serif
       position: absolute
       color: #ffffff
       z-index: 101
+      p
+        text-shadow: 0 0 5px #000
 
     .croparea
       width: 100%
